# steam-game-recommender

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/: games_cleaned.parquet
notebooks/: recsys.ipynb  recsys_final.ipynb  recsys_imp.ipynb
src/: recommender.py
